// Original file: proto/subject.proto

import type { SubjectRequest as _subjectPackage_SubjectRequest, SubjectRequest__Output as _subjectPackage_SubjectRequest__Output } from '../subjectPackage/SubjectRequest';

export interface SubjectResponse {
  'subjects'?: (_subjectPackage_SubjectRequest)[];
}

export interface SubjectResponse__Output {
  'subjects'?: (_subjectPackage_SubjectRequest__Output)[];
}
